# ascii-cam

./: .cross.toml  .gitignore  AGENTS.md  CODE.md  Cargo.toml  MACOS_MIGRATION.md  PROJECT.md  README.md  TODO.md  TROUBLESHOOTING.md  USERFINDINGS.md  USERFINDINGS_ANALYSIS.md  agent_personas.md  audio.rs  char.md  english.md  prompt.md  select_profile.sh  skill.md  skill_agentprompter.md
.backups/: Caretaker.md
.breedingpool/: AgentEngineer.md
.github/workflows/: release.yml
.management/: AgentManager.md  Analyst.md  Engineer.md  agent_manager.sh  bug_index.md
.management/skills/: CEO.md  Customer_Success.md  Data.md  Finance.md  HR.md  Legal.md  Product_Manager.md  Sales.md  Security.md
.temp/: caretaker.sh
DEBUG/: Cargo.toml  README.md  TROUBLESHOOTING.md  debug.sh  skill.md
DEBUG/fix/: README.md  debugdoc.md
DEBUG/src/: PROJECT.md  charset.rs  ir.rs  layers.rs  midi.rs
research/: README.md  agent-workflow-patterns.md  analysis.md  asset-capabilities.md  bottlenecks.md  camera-system.md  codebase-optimization.md  demo-assets.md  implementation-plan.md  implementations.md  path-tracing-ntc.md  profiling.md  research-ai-rendering-pipelines.md  skill.md  weak-spots.md  workflow.md  workflow_improvements.md
src/: PROJECT.md  SKILL.md  audio.rs  charset.rs  ir.rs  main.rs  osc.rs
